--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta property="og:site_name" content="I coded a game with Zuitt!" />
     <meta
       property="og:image"
-      content="[your-deployment-link]/images/story-thumbnail-2048.jpg"
+      content="https://owdyey.github.io/burgos-2048-jsfcb/images/story-thumbnail-2048.jpg"
     />
-    <meta property="og:image:secure_url" content="[your-deployment-link]" />
+    <meta property="og:image:secure_url" content="https://owdyey.github.io/burgos-2048-jsfcb/" />
 
     <title>2048</title>
 
@@ -33,7 +33,7 @@
           <div class="share-label">Share:</div>
           <div class="share-icons">
             <a
-              href="https://www.facebook.com/sharer/sharer.php?u=[your-deployment-link]"
+              href="https://www.facebook.com/sharer/sharer.php?u=https://owdyey.github.io/burgos-2048-jsfcb/"
               target="_blank"
               ><img src="./images/share_2048-fb.svg" alt="fb share image"
             /></a>
